--- a/public/signup.html
+++ b/public/signup.html
@@ -8,28 +8,25 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
-    <link href="/paralexcss/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="/styles/signup.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="/paralexcss/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="/css/Style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <!-- <link href="/style/Style.css" type="text/css" rel="stylesheet" media="screen,projection" /> -->
 </head>
 
 <body>
     <nav class="white" role="navigation">
-
         <div class="nav-wrapper container">
             <a id="logo-container" class="brand-logo">Nerdify</a>
             <ul class="right hide-on-med-and-down">
                 <li>
-                    <a href="#" id="homebtn" class="btn-large waves-effect waves-light teal lighten-1">Home</a
-          </li>
+                    <a href="/home.html" id="homebtn" class="btn-large waves-effect waves-light teal lighten-1">Home</a>
+                </li>
         </ul>
         <ul id="nav-mobile" class="sidenav">
           <li><a href="#">Navbar Link</a></li>
             </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a
-        >
+            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
-
     </nav>
 
     <div id="index-banner" class="parallax-container">
@@ -201,10 +198,6 @@
 
                 <br /><br />
             </div>
-        </div>
-
-        <div class="parallax">
-            <img src="assets/neon-background2.jpg" class="responsive-img" alt="Unsplashed background img 3" />
         </div>
     </div>
 
